--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,13 @@ version: 0.1
 phases:
   build:
     commands:
-      - echo NADA
+      - npm install
+      - npm run webpack
 
 artifacts:
   files:
     - index.html
     - favicon.ico
     - styles/*
-    - images/*      
+    - images/*
+    - dist/bundle.js      
